<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.thermostat.AddSchedule">

    <TextView
        android:id="@+id/addScheduleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_new_schedule"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/scheduleNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/enter_schedule_name"
        android:inputType="textPersonName"
        android:minHeight="58dp"
        android:minWidth="316dp"/>

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:text="@string/enter_temperature" />

    <NumberPicker
        android:id="@+id/temperaturePicker"
        android:layout_width="179dp"
        android:layout_height="85dp" />

    <TextView
        android:id="@+id/modeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/enter_mode" />

    <Spinner
        android:id="@+id/modesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/thermostatModes"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/enter_start_time" />

    <TimePicker
        android:id="@+id/startTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"/>

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/enter_end_time" />

    <TimePicker
        android:id="@+id/endTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:timePickerMode="spinner"/>

    <Button
        android:id="@+id/createScheduleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:minHeight="48dp"
        android:text="@string/add_schedule" />

</LinearLayout>