<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.divisions.AddDevice">

    <TextView
        android:id="@+id/addDeviceHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/add_new_device_header"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/deviceNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_device_name"
        android:inputType="textPersonName"
        android:minHeight="58dp"
        android:minWidth="316dp"/>

    <TextView
        android:id="@+id/devicesTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="@string/device_type"
        />

    <Spinner
        android:id="@+id/devicesTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/deviceTypes"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/createDeviceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:minHeight="48dp"
        android:text="@string/saveDevice" />


</LinearLayout>