<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.thermostat.ThermostatConfig">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="587dp" />

    <TextView
        android:id="@+id/thermostatTextview"
        android:layout_width="205dp"
        android:layout_height="202dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/thermostat_circle"
        android:text="@string/thermo_txt"
        android:textSize="25sp"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topGuideline" />

    <SeekBar
        android:id="@+id/thermostatSeekbar"
        android:layout_width="209dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thermostatTextview"
        app:layout_constraintVertical_bias="0.129" />

    <ImageView
        android:id="@+id/thermostatBtnBar"
        android:layout_width="349dp"
        android:layout_height="85dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/configuration_bar" />

    <ImageButton
        android:id="@+id/thermostatPowerBtn"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/power_off"
        app:layout_constraintEnd_toStartOf="@+id/thermostatModeBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/thermostatBtnBar"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/thermostatModeBtn"
        android:layout_width="53dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/thermostatModes"
        app:layout_constraintBottom_toBottomOf="@+id/thermostatPowerBtn"
        app:layout_constraintEnd_toStartOf="@+id/thermostatScheduleBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thermostatPowerBtn"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/thermostatScheduleBtn"
        android:layout_width="47dp"
        android:layout_height="39dp"
        android:background="@drawable/ic_baseline_note_24"
        app:layout_constraintBottom_toBottomOf="@+id/thermostatModeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/thermostatModeBtn"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/powerBtnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="4dp"
        android:text="@string/off"
        app:layout_constraintStart_toStartOf="@+id/thermostatBtnBar"
        app:layout_constraintTop_toBottomOf="@+id/thermostatPowerBtn" />

    <TextView
        android:id="@+id/modeBtnLabel"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/mode"
        app:layout_constraintStart_toStartOf="@+id/thermostatModeBtn"
        app:layout_constraintTop_toBottomOf="@+id/thermostatModeBtn" />

    <TextView
        android:id="@+id/scheduleBtnLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        android:text="@string/schedule"
        app:layout_constraintEnd_toEndOf="@+id/thermostatBtnBar"
        app:layout_constraintTop_toBottomOf="@+id/thermostatScheduleBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>